src/css/style.css
.display-5 span{
    background: linear-gradient(
        to right,
        #ff6a00,
        #ee0979
      );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.feature-icon {
    width: 4rem;
    height: 4rem;
    border-radius: .75rem;
  }
  
  .icon-link > .bi {
    margin-top: .125rem;
    margin-left: .125rem;
    fill: currentcolor;
    transition: transform .25s ease-in-out;
  }
  .icon-link:hover > .bi {
    transform: translate(.25rem);
  }
  
  .icon-square {
    width: 3rem;
    height: 3rem;
    border-radius: .75rem;
  }

